log/build_2024-01-10_20-10-47/auto_drive_control/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/jo/final_commit/install/auto_drive_control/lib/python3.10/site-packages/auto_drive_control/connect_arduino.py", line 4
    from 
         ^
SyntaxError: invalid syntax

